--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,23 +1,27 @@
+---
+# 3. INGRESS (L'aiguillage Traefik)
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: klaro
-  namespace: apps
+  name: kadastro-ingress
   annotations:
-    # Intégration avec ton Traefik existant
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.tls: "true"
-    traefik.ingress.kubernetes.io/router.tls.certresolver: "le" 
 spec:
-  ingressClassName: traefik
   rules:
-    - host: klaro.dgsynthex.online 
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: klaro
-                port:
-                  number: 80
+  - host: kadastro.ton-domaine.fr
+    http:
+      paths:
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: kadastro-api-service
+            port:
+              number: 8080
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kadastro-ui-service
+            port:
+              number: 80
